--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -836,7 +836,7 @@ nav.tabs {
     }
 
     .layout__region--first {
-      padding: 0 7%;
+      padding: 1em 7%;
       box-sizing: border-box;
       margin: 0;
       flex: 1 1 36%;
